--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anonaddy-extension",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
@@ -15,19 +15,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "archiver": "^3.1.1",
-    "husky": "^3.1.0",
-    "laravel-mix": "^5.0.7",
-    "lint-staged": "^9.5.0",
-    "postcss-import": "^12.0.1",
-    "postcss-nesting": "^7.0.1",
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.9.5",
+    "autoprefixer": "^9.8.6",
+    "laravel-mix": "^5.0.9",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "v-clipboard": "^2.2.3",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
     "webextension-polyfill": "^0.5.0"
+  },
+  "devDependencies": {
+    "husky": "^4.3.7",
+    "lint-staged": "^10.5.3",
+    "prettier": "2.2.1"
   },
   "husky": {
     "hooks": {
@@ -36,8 +38,7 @@
   },
   "lint-staged": {
     "*.{css,js,vue}": [
-      "npm run format --",
-      "git add"
+      "npm run format --"
     ]
   }
 }
