--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "anonaddy-extension",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
-    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "mix",
+    "watch": "mix watch",
+    "production": "mix --production",
     "build": "npm run production && rm -rf dist-zip && npm run zip",
     "format": "prettier --write 'src/assets/**/*.{css,js,vue}'",
     "zip": "node scripts/build-zip.js"
@@ -17,12 +16,14 @@
   "license": "ISC",
   "dependencies": {
     "archiver": "^3.1.1",
-    "autoprefixer": "^9.8.6",
-    "laravel-mix": "^5.0.9",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "autoprefixer": "^10.0.2",
+    "laravel-mix": "^6.0.6",
+    "postcss": "^8.1.14",
+    "postcss-import": "^12.0.1",
+    "tailwindcss": "^2.0.1",
     "v-clipboard": "^2.2.3",
     "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
     "webextension-polyfill": "^0.5.0"
   },
