--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anonaddy-extension",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
@@ -17,7 +17,7 @@
   "dependencies": {
     "archiver": "^3.1.1",
     "autoprefixer": "^10.2.3",
-    "laravel-mix": "^6.0.10",
+    "laravel-mix": "^6.0.11",
     "postcss": "^8.1.14",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^2.0.1",
@@ -39,7 +39,7 @@
   },
   "lint-staged": {
     "*.{css,js,vue}": [
-      "npm run format --"
+      "prettier --write"
     ]
   }
 }
