--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anonaddy-extension",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
@@ -9,33 +9,30 @@
     "production": "mix --production",
     "build": "npm run production && rm -rf dist-zip && npm run zip",
     "format": "prettier --write 'src/assets/**/*.{css,js,vue}'",
-    "zip": "node scripts/build-zip.js"
+    "zip": "node scripts/build-zip.js",
+    "pre-commit": "lint-staged",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "archiver": "^3.1.1",
+    "archiver": "^5.3.0",
     "autoprefixer": "^10.2.3",
     "laravel-mix": "^6.0.11",
     "postcss": "^8.1.14",
-    "postcss-import": "^12.0.1",
+    "postcss-import": "^14.0.0",
     "tailwindcss": "^2.0.1",
     "v-clipboard": "^2.2.3",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webextension-polyfill": "^0.5.0"
+    "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "lint-staged": "^10.5.3",
     "prettier": "2.2.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{css,js,vue}": [
