--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anonaddy-extension",
-  "version": "1.1.7",
+  "version": "2.0.0",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
@@ -19,20 +19,24 @@
   "dependencies": {
     "archiver": "^5.3.0",
     "autoprefixer": "^10.2.3",
+    "dayjs": "^1.10.5",
     "laravel-mix": "^6.0.11",
+    "lodash": "^4.17.21",
     "postcss": "^8.1.14",
     "postcss-import": "^14.0.0",
     "tailwindcss": "^2.0.1",
     "v-clipboard": "^2.2.3",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
+    "vue-multiselect": "^2.1.6",
+    "vue-notification": "^1.3.20",
     "vue-template-compiler": "^2.6.12",
     "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
     "husky": "^6.0.0",
-    "lint-staged": "^10.5.3",
-    "prettier": "2.2.1"
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.2.1"
   },
   "lint-staged": {
     "*.{css,js,vue}": [
