--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "AnonAddy",
+  "name": "AnonAddy - Anonymous Email Forwarding",
   "author": "Will Browning",
   "description": "Open-source Anonymous Email Forwarding",
   "homepage_url": "https://anonaddy.com",
