--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anonaddy-extension",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
@@ -34,7 +34,8 @@
     "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
-    "husky": "^6.0.0",
+    "css-loader": "^5.2.7",
+    "husky": "^7.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.2.1"
   },
