--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anonaddy-extension",
-  "version": "2.0.13",
+  "version": "2.0.14",
   "description": "AnonAddy browser extension.",
   "main": "app.js",
   "scripts": {
@@ -17,6 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.3.4",
+    "@vueform/multiselect": "^2.3.2",
     "archiver": "^5.3.0",
     "autoprefixer": "^10.4.1",
     "dayjs": "^1.10.5",
@@ -25,11 +27,9 @@
     "postcss": "^8.4.5",
     "postcss-import": "^14.0.0",
     "tailwindcss": "^3.0.11",
-    "v-clipboard": "^2.2.3",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.6",
-    "vue-multiselect": "^2.1.6",
-    "vue-notification": "^1.3.20",
+    "v-clipboard": "github:euvl/v-clipboard",
+    "vue": "^3.0.0",
+    "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.6.12",
     "webextension-polyfill": "^0.8.0"
   },
