--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -5,5 +5,6 @@
     "/dist/manifest.json": "/dist/manifest.json",
     "/dist/img/icon.png": "/dist/img/icon.png",
     "/dist/img/icon@2x.png": "/dist/img/icon@2x.png",
-    "/dist/img/logo.png": "/dist/img/logo.png"
+    "/dist/img/logo.png": "/dist/img/logo.png",
+    "/dist/img/logo.svg": "/dist/img/logo.svg"
 }
