--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,11 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "addy.io - Anonymous Email Forwarding",
   "short_name": "addy.io",
   "author": "Will Browning",
   "description": "Open-source Anonymous Email Forwarding, create unlimited email aliases for free",
   "homepage_url": "https://addy.io",
-  "version": "2.2.12",
+  "version": "2.3.0",
   "icons": {
     "16": "img/icon_16.png",
     "32": "img/icon_32.png",
@@ -13,7 +13,7 @@
     "96": "img/icon_96.png",
     "128": "img/icon_128.png"
   },
-  "browser_action": {
+  "action": {
     "default_title": "addy.io",
     "default_popup": "app.html"
   },
@@ -21,7 +21,9 @@
     "storage",
     "activeTab"
   ],
-  "content_security_policy": "script-src 'self' ; object-src 'self'",
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' ; object-src 'self'"
+  },
   "browser_specific_settings": {
     "gecko": {
       "id": "browser-extension@anonaddy"
