--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@kyvg/vue3-notification": "^3.0.0",
+    "@tailwindcss/postcss": "^4.1.7",
     "@vueform/multiselect": "^2.3.2",
     "archiver": "^7.0.0",
     "autoprefixer": "^10.4.1",
@@ -27,7 +28,7 @@
     "postcss": "^8.4.5",
     "postcss-import": "^16.0.0",
     "psl": "^1.9.0",
-    "tailwindcss": "^3.0.11",
+    "tailwindcss": "^4.1.7",
     "vue": "^3.0.0",
     "vue-loader": "^17.0.0",
     "vue-template-compiler": "^2.6.12",
@@ -37,7 +38,8 @@
     "css-loader": "^7.0.0",
     "husky": "^9.0.0",
     "lint-staged": "^16.0.0",
-    "prettier": "^3.0.0"
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "lint-staged": {
     "*.{css,js,vue}": [
