Fixed missing bakground scripts

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -24,7 +24,8 @@
     "notifications"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "scripts": ["background.js"]
   },
   "content_scripts": [
     {
