--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "author": "Will Browning",
   "description": "Open-source Anonymous Email Forwarding, create unlimited email aliases for free",
   "homepage_url": "https://addy.io",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "icons": {
     "16": "img/icon_16.png",
     "32": "img/icon_32.png",
@@ -24,8 +24,7 @@
     "notifications"
   ],
   "background": {
-    "service_worker": "background.js",
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
